Last fixes (centering bullet points in Chrome, replaced the contact email by contact@blockchainlegal.fr, horizontally aligned experiences and studies and updated the wording)

--- a/css/shards.css
+++ b/css/shards.css
@@ -126,6 +126,14 @@ ul {
   padding-left: 0;
 }
 
+li {
+  list-style-position: inside;
+}
+
+.bio {
+  min-height: 192px;
+}
+
 .testimonial ul {
   padding-left: 15px;
   color: #082a44;
